--- a/globaldata/recovery_rate_analysis_dashboard.html
+++ b/globaldata/recovery_rate_analysis_dashboard.html
@@ -92,9 +92,9 @@
     async function loadData() {
       try {
         const [confirmed, deaths, recovered] = await Promise.all([
-          d3.csv('data/confirmed.csv'),
-          d3.csv('data/death.csv'),
-          d3.csv('data/recovery.csv')
+          d3.csv('data/confirmed_GD.csv'),
+          d3.csv('data/death_GD.csv'),
+          d3.csv('data/recovery_GD.csv')
         ]);
 
         const allYears = [...new Set(
