--- a/globaldata/comparative_barchart_by_timeperiod.html
+++ b/globaldata/comparative_barchart_by_timeperiod.html
@@ -61,167 +61,177 @@
   </div>
 
   <script>
-    const svg = d3.select("#chart");
-    const tooltip = document.getElementById("tooltip");
-    const width = 1000, height = 600, margin = { top: 50, right: 50, bottom: 150, left: 100 };
-    const innerWidth = width - margin.left - margin.right;
-    const innerHeight = height - margin.top - margin.bottom;
+  const svg = d3.select("#chart");
+  const tooltip = document.getElementById("tooltip");
+  const width = 1000, height = 600, margin = { top: 50, right: 50, bottom: 150, left: 100 };
+  const innerWidth = width - margin.left - margin.right;
+  const innerHeight = height - margin.top - margin.bottom;
 
-    const metricSelect = document.getElementById("metric");
-    const countrySelect = document.getElementById("country");
+  const metricSelect = document.getElementById("metric");
+  const countrySelect = document.getElementById("country");
 
-    const parseDate = d3.timeParse("%m/%d/%y");
-    const formatDate = d3.timeFormat("%b %Y");
+  const parseDate = d3.timeParse("%m/%d/%y");
+  const formatDate = d3.timeFormat("%b %Y");
 
-    const periods = [
-      ["2020-01-01", "2020-06-30"],
-      ["2020-07-01", "2020-12-31"],
-      ["2021-01-01", "2021-06-30"],
-      ["2021-07-01", "2021-12-31"],
-      ["2022-01-01", "2022-06-30"],
-      ["2022-07-01", "2022-12-31"],
-      ["2023-01-01", "2023-03-09"]
-    ];
+  const periods = [
+    ["2020-01-01", "2020-06-30"],
+    ["2020-07-01", "2020-12-31"],
+    ["2021-01-01", "2021-06-30"],
+    ["2021-07-01", "2021-12-31"],
+    ["2022-01-01", "2022-06-30"],
+    ["2022-07-01", "2022-12-31"],
+    ["2023-01-01", "2023-03-09"]
+  ];
 
-    const periodLabels = periods.map(([start, end]) =>
-      `${formatDate(new Date(start))}–${formatDate(new Date(end))}`
-    );
+  const periodLabels = periods.map(([start, end]) =>
+    `${formatDate(new Date(start))}–${formatDate(new Date(end))}`
+  );
 
-    async function loadData() {
-      const [confirmed, deaths, recovered] = await Promise.all([
-        d3.csv("data/confirmed_GD.csv"),
-        d3.csv("data/death_GD.csv"),
-        d3.csv("data/recovery_GD.csv")
-      ]);
+  async function loadData() {
+    const [confirmed, deaths, recovered] = await Promise.all([
+      d3.csv("data/confirmed.csv"),
+      d3.csv("data/death.csv"),
+      d3.csv("data/recovery.csv")
+    ]);
 
-      const dateColumns = confirmed.columns.slice(4);
-      const datasets = { cases: confirmed, deaths, recovered };
-      const countries = new Set();
-      const metricsData = {};
+    const dateColumns = confirmed.columns.slice(4);
+    const datasets = { cases: confirmed, deaths, recovered };
+    const countries = new Set();
+    const metricsData = {};
 
-      for (const [key, dataset] of Object.entries(datasets)) {
-        const countryMap = new Map();
-        for (const row of dataset) {
-          const country = row["Country/Region"];
-          countries.add(country);
-          if (!countryMap.has(country)) {
-            countryMap.set(country, new Array(periods.length).fill(0));
+    for (const [key, dataset] of Object.entries(datasets)) {
+      const countryMap = new Map();
+
+      for (const row of dataset) {
+        const country = row["Country/Region"];
+        countries.add(country);
+        if (!countryMap.has(country)) {
+          countryMap.set(country, new Array(periods.length).fill(0));
+        }
+
+        for (let i = 0; i < periods.length; i++) {
+          const [start, end] = periods[i].map(d => new Date(d));
+          let firstValue = null;
+          let lastValue = null;
+
+          for (const date of dateColumns) {
+            const parsedDate = parseDate(date);
+            const rawValue = row[date];
+            const value = rawValue && !isNaN(rawValue) ? +rawValue : 0;
+
+            if (parsedDate >= start && parsedDate <= end) {
+              if (firstValue === null) {
+                firstValue = value;
+              }
+              lastValue = value;
+            }
           }
 
-          for (let i = 0; i < periods.length; i++) {
-            const [start, end] = periods[i].map(d => new Date(d));
-            let total = 0;
-            for (const date of dateColumns) {
-              const parsedDate = parseDate(date);
-              const rawValue = row[date];
-              const value = rawValue && !isNaN(rawValue) ? +rawValue : 0;
-
-              if (parsedDate >= start && parsedDate <= end) {
-                total += value;
-              }
-            }
-            countryMap.get(country)[i] += total;
+          if (firstValue !== null && lastValue !== null) {
+            countryMap.get(country)[i] += lastValue - firstValue;
           }
         }
-        metricsData[key] = countryMap;
       }
 
-      // Populate country dropdown with Algeria first
-      const sortedCountries = Array.from(countries).sort();
-      countrySelect.innerHTML = "";
+      metricsData[key] = countryMap;
+    }
 
-      // Ensure Algeria is added first and selected
-      const algeriaOption = document.createElement("option");
-      algeriaOption.value = "Algeria";
-      algeriaOption.textContent = "Algeria";
-      algeriaOption.selected = true;
-      countrySelect.appendChild(algeriaOption);
+    // Populate country dropdown with Algeria first
+    const sortedCountries = Array.from(countries).sort();
+    countrySelect.innerHTML = "";
 
-      sortedCountries.forEach(c => {
-        if (c !== "Algeria") {
-          const opt = document.createElement("option");
-          opt.value = c;
-          opt.textContent = c;
-          countrySelect.appendChild(opt);
-        }
+    const algeriaOption = document.createElement("option");
+    algeriaOption.value = "Algeria";
+    algeriaOption.textContent = "Algeria";
+    algeriaOption.selected = true;
+    countrySelect.appendChild(algeriaOption);
+
+    sortedCountries.forEach(c => {
+      if (c !== "Algeria") {
+        const opt = document.createElement("option");
+        opt.value = c;
+        opt.textContent = c;
+        countrySelect.appendChild(opt);
+      }
+    });
+
+    drawChart(metricsData);
+    metricSelect.addEventListener("change", () => drawChart(metricsData));
+    countrySelect.addEventListener("change", () => drawChart(metricsData));
+  }
+
+  function drawChart(metricsData) {
+    svg.selectAll("*").remove();
+    const g = svg.append("g").attr("transform", `translate(${margin.left},${margin.top})`);
+
+    const selectedMetric = metricSelect.value;
+    const selectedCountry = countrySelect.value;
+    const dataMap = metricsData[selectedMetric];
+
+    let data = dataMap.get(selectedCountry) || new Array(periods.length).fill(0);
+
+    const x = d3.scaleBand()
+      .domain(periodLabels)
+      .range([0, innerWidth])
+      .padding(0.2);
+
+    const y = d3.scaleLinear()
+      .domain([0, d3.max(data)]).nice()
+      .range([innerHeight, 0]);
+
+    const color = d3.scaleOrdinal()
+      .domain(periodLabels)
+      .range(d3.schemeTableau10);
+
+    g.append("g")
+      .attr("transform", `translate(0,${innerHeight})`)
+      .call(d3.axisBottom(x))
+      .selectAll("text")
+      .style("text-anchor", "end")
+      .attr("transform", "rotate(-40)");
+
+    g.append("g")
+      .call(d3.axisLeft(y).ticks(10).tickFormat(d3.format(",")))
+      .append("text")
+      .attr("x", -innerHeight / 2)
+      .attr("y", -60)
+      .attr("fill", "black")
+      .attr("text-anchor", "middle")
+      .attr("transform", "rotate(-90)")
+      .text("Count");
+
+    g.selectAll("rect")
+      .data(data.map((value, i) => ({ label: periodLabels[i], value })))
+      .enter()
+      .append("rect")
+      .attr("x", d => x(d.label))
+      .attr("y", d => y(d.value))
+      .attr("width", x.bandwidth())
+      .attr("height", d => innerHeight - y(d.value))
+      .attr("fill", d => color(d.label))
+      .on("mouseover", (event, d) => {
+        tooltip.style.opacity = 1;
+        tooltip.innerHTML = `<strong>${d.label}</strong><br>${metricSelect.options[metricSelect.selectedIndex].text}: ${d3.format(",")(Math.round(d.value))}`;
+      })
+      .on("mousemove", event => {
+        tooltip.style.left = `${event.pageX + 10}px`;
+        tooltip.style.top = `${event.pageY + 10}px`;
+      })
+      .on("mouseout", () => {
+        tooltip.style.opacity = 0;
       });
 
-      drawChart(metricsData);
-      metricSelect.addEventListener("change", () => drawChart(metricsData));
-      countrySelect.addEventListener("change", () => drawChart(metricsData));
-    }
+    svg.append("text")
+      .attr("x", width / 2)
+      .attr("y", 30)
+      .attr("text-anchor", "middle")
+      .style("font-size", "18px")
+      .style("font-weight", "bold")
+      .text(`COVID-19 ${metricSelect.options[metricSelect.selectedIndex].text} in ${selectedCountry}`);
+  }
 
-    function drawChart(metricsData) {
-      svg.selectAll("*").remove();
-      const g = svg.append("g").attr("transform", `translate(${margin.left},${margin.top})`);
+  loadData();
+</script>
 
-      const selectedMetric = metricSelect.value;
-      const selectedCountry = countrySelect.value;
-      const dataMap = metricsData[selectedMetric];
-
-      let data = dataMap.get(selectedCountry) || new Array(periods.length).fill(0);
-
-      const x = d3.scaleBand()
-        .domain(periodLabels)
-        .range([0, innerWidth])
-        .padding(0.2);
-
-      const y = d3.scaleLinear()
-        .domain([0, d3.max(data)]).nice()
-        .range([innerHeight, 0]);
-
-      const color = d3.scaleOrdinal()
-        .domain(periodLabels)
-        .range(d3.schemeTableau10);
-
-      g.append("g")
-        .attr("transform", `translate(0,${innerHeight})`)
-        .call(d3.axisBottom(x))
-        .selectAll("text")
-        .style("text-anchor", "end")
-        .attr("transform", "rotate(-40)");
-
-      g.append("g")
-        .call(d3.axisLeft(y).ticks(10).tickFormat(d3.format(",")))
-        .append("text")
-        .attr("x", -innerHeight / 2)
-        .attr("y", -60)
-        .attr("fill", "black")
-        .attr("text-anchor", "middle")
-        .attr("transform", "rotate(-90)")
-        .text("Count");
-
-      g.selectAll("rect")
-        .data(data.map((value, i) => ({ label: periodLabels[i], value })))
-        .enter()
-        .append("rect")
-        .attr("x", d => x(d.label))
-        .attr("y", d => y(d.value))
-        .attr("width", x.bandwidth())
-        .attr("height", d => innerHeight - y(d.value))
-        .attr("fill", d => color(d.label))
-        .on("mouseover", (event, d) => {
-          tooltip.style.opacity = 1;
-          tooltip.innerHTML = `<strong>${d.label}</strong><br>${metricSelect.options[metricSelect.selectedIndex].text}: ${d3.format(",")(Math.round(d.value))}`;
-        })
-        .on("mousemove", event => {
-          tooltip.style.left = `${event.pageX + 10}px`;
-          tooltip.style.top = `${event.pageY + 10}px`;
-        })
-        .on("mouseout", () => {
-          tooltip.style.opacity = 0;
-        });
-
-      svg.append("text")
-        .attr("x", width / 2)
-        .attr("y", 30)
-        .attr("text-anchor", "middle")
-        .style("font-size", "18px")
-        .style("font-weight", "bold")
-        .text(`COVID-19 ${metricSelect.options[metricSelect.selectedIndex].text} in ${selectedCountry}`);
-    }
-
-    loadData();
-  </script>
 </body>
 </html>
